src/objects/RelocationSecondments__c.object
<CustomObject>
    <fields>
        <fullName>BudgetSetQuestionnaire__c</fullName>
        <label>Budget Set Questionnaire</label>
        <referenceTo>BudgetSetupQuestionnaire__c</referenceTo>
        <relationshipName>RelocationsSecondments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EstimatedCosts__c</fullName>
        <label>Estimated Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <description>Resource&apos;s mailing state and country</description>
        <formula>Resource__r.MailingState+&quot;,&quot;+Resource__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RelocationsSecondments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SecondmentLocation__c</fullName>
        <label>Secondment Location</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>xxRelocation / Secondment (Old)</label>
    <nameField>
        <displayFormat>RS-{00000000}</displayFormat>
        <label>Relocation / Secondements Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>xxRelocations / Secondments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>